--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ coverage
 # Fabric binaries which developers have to downloaded it in your own environment
 ./fabric/enviroments/dev/n2mi/bin/
 
+# Local chaincode path
+./fabric/enviroments/dev/n2mi/chaincode/
+
 # Bower dependency directory (https://bower.io/)
 bower_components
 
