[MAT-42] Sobe configuração da rede para CC

--- a/fabric/chaincodes/med/package.json
+++ b/fabric/chaincodes/med/package.json
@@ -20,6 +20,8 @@
   "author": "fmarino, vpoliveira",
   "license": "ISC",
   "dependencies": {
+    "fabric-shim": "^1.4.0",
+    "node-gyp": "^3.8.0",
     "typescript": "^3.2.4"
   },
   "devDependencies": {
