--- a/fabric/chaincodes/med/tsconfig.json
+++ b/fabric/chaincodes/med/tsconfig.json
@@ -2,18 +2,12 @@
     "compilerOptions": {
       "target": "es2017",
       "module": "commonjs",
-      "allowJs": true,
-      "checkJs": true,
       "outDir": "./dist",
+      "moduleResolution": "node",
       "sourceMap": true,
-      "strict": true,
-      "noImplicitAny": true,
-      "strictNullChecks": true
+      "noImplicitAny": true
     },
     "include": [
-      "**/*.ts"
-    ],
-    "exclude": [
-      "node_modules"
+      "./src/**/*"
     ]
 }
