--- a/fabric/enviroments/dev/n2mi/node-material/crypto-config.yaml
+++ b/fabric/enviroments/dev/n2mi/node-material/crypto-config.yaml
@@ -27,6 +27,7 @@ PeerOrgs:
   # ---------------------------------------------------------------------------
   - Name: N2mi
     Domain: n2mi.n2med.com
+    EnableNodeOUs: true
     # ---------------------------------------------------------------------------
     # "Specs"
     # ---------------------------------------------------------------------------
@@ -61,7 +62,7 @@ PeerOrgs:
     # name collisions
     # ---------------------------------------------------------------------------
     Template:
-      Count: 1
+      Count: 2
       # Start: 5
       # Hostname: {{.Prefix}}{{.Index}} # default
     # ---------------------------------------------------------------------------
