--- a/fabric/enviroments/dev/n2mi/node-material/docker-compose.yml
+++ b/fabric/enviroments/dev/n2mi/node-material/docker-compose.yml
@@ -120,6 +120,7 @@ services:
         - /var/run/:/host/var/run/
         - ./../../../../chaincodes/:/opt/gopath/src/github.com/
         - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
+        - ./config:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
     networks:
         - n2med
     #depends_on:
