--- a/fabric/enviroments/dev/n2mi/node-material/docker-compose.yml
+++ b/fabric/enviroments/dev/n2mi/node-material/docker-compose.yml
@@ -63,7 +63,7 @@ services:
       # # the following setting starts chaincode containers on the same
       # # bridge network as the peers
       # # https://docs.docker.com/compose/networking/
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=${COMPOSE_PROJECT_NAME}_n2med
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=n2mi_n2med
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb:5984
       # The CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME and CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
