--- a/fabric/chaincodes/med/package.json
+++ b/fabric/chaincodes/med/package.json
@@ -13,7 +13,7 @@
     "pretest": "npm run lint",
     "test": "nyc mocha -r ts-node/register src/**/*.spec.ts",
     "start": "fabric-chaincode-node start",
-    "build": "tsc",
+    "build": "tsc --target ES2018 --experimentalDecorators --emitDecoratorMetadata",
     "build:watch": "tsc -w",
     "prepublishOnly": "npm run build"
   },
@@ -21,8 +21,10 @@
   "author": "fmarino, vpoliveira",
   "license": "ISC",
   "dependencies": {
+    "@types/xlsx": "0.0.36",
     "fabric-contract-api": "^1.4.0",
-    "fabric-shim": "~1.4.0"
+    "fabric-shim": "~1.4.0",
+    "guid-typescript": "^1.0.9"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
