--- a/fabric/chaincodes/med/tsconfig.json
+++ b/fabric/chaincodes/med/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
-      "target": "es2017",
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "target": "es2018",
       "module": "commonjs",
       "outDir": "./dist",
       "moduleResolution": "node",
