[MAT-75] Valida MedicineRequest
Cria as validações do MedicineRequest.

--- a/fabric/chaincodes/med/collection-config.json
+++ b/fabric/chaincodes/med/collection-config.json
@@ -1,6 +1,6 @@
 [
     {
-        "name": "N2miMSP-PD",
+        "name": "MED-REQUEST-PD",
         "policy": "OR('N2miMSP.member')",
 	    "requiredPeerCount": 0,
 	    "maxPeerCount": 2,
