--- a/fabric/chaincodes/med/tsconfig.json
+++ b/fabric/chaincodes/med/tsconfig.json
@@ -7,7 +7,8 @@
       "outDir": "./dist",
       "moduleResolution": "node",
       "sourceMap": true,
-      "noImplicitAny": true
+      "noImplicitAny": true,
+      "allowJs": true
     },
     "include": [
       "./src/**/*"
