--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,28 +10,26 @@ networks:
 
 services:
   ca.n2med.com:
-    command: sh -c 'fabric-ca-server start -b admin:adminpw'
+    image: hyperledger/fabric-ca:1.4.0
     container_name: ca.n2med.com
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server-config
       - FABRIC_CA_SERVER_CA_NAME=ca.n2med.com
       - FABRIC_CA_SERVER_CA_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.n2mi.n2med.com-cert.pem
-      - FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server-config/00dde52ad49be4deb3eba7ce4cec0b753f70f53b52a4b49ca201da88aee651ae_sk
+      - FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server-config/1cfd22ebbcd65f345af7e2f45b7b545f44dd02fc577f9c8ac670e5f64d3b4a1c_sk
       - TZ=America/Sao_Paulo
-    image: hyperledger/fabric-ca:1.4.0
-    restart: always
-    networks:
-      - n2med
     ports:
       - "7054:7054"
+    command: sh -c 'fabric-ca-server start -b admin:adminpw'
+    restart: always
     volumes:
       - ./certificates/crypto-config/peerOrganizations/n2mi.n2med.com/ca/:/etc/hyperledger/fabric-ca-server-config
+    networks:
+      - n2med
 
   orderer.n2med.com:
-    command: orderer
     container_name: orderer.n2med.com
-    depends_on:
-      - ca.n2med.com
+    image: hyperledger/fabric-orderer:1.4.0
     environment:
       - FABRIC_LOGGING_SPEC=debug
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
@@ -40,24 +38,23 @@ services:
       - ORDERER_GENERAL_LOCALMSPID=OrdererN2medMSP
       - ORDERER_GENERAL_LOCALMSPDIR=/etc/hyperledger/msp/orderer/msp
       - TZ=America/Sao_Paulo
-    image: hyperledger/fabric-orderer:1.4.0
-    networks:
-      - n2med
+    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/orderer
+    command: orderer
+    restart: always
     ports:
       - 7050:7050
-    restart: always
     volumes:
       - ./certificates/config/:/etc/hyperledger/configtx
       - ./certificates/crypto-config/ordererOrganizations/n2med.com/orderers/orderer.n2med.com/:/etc/hyperledger/msp/orderer
       - ./certificates/crypto-config/peerOrganizations/n2mi.n2med.com/peers/peer0.n2mi.n2med.com/:/etc/hyperledger/msp/peerN2mi
-    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/orderer
+    depends_on:
+      - ca.n2med.com
+    networks:
+      - n2med
 
   peer0.n2mi.n2med.com:
-    command: peer node start
-    # command: peer node start --peer-chaincodedev=true
     container_name: peer0.n2mi.n2med.com
-    depends_on:
-      - orderer.n2med.com
+    image: hyperledger/fabric-peer:1.4.0
     environment:
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_PEER_ID=peer0.n2mi.n2med.com
@@ -69,59 +66,47 @@ services:
       - CORE_PEER_LOCALMSPID=N2miMSP
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/msp/peer/
       - CORE_PEER_ADDRESS=peer0.n2mi.n2med.com:7051
-      - TZ=America/Sao_Paulo
-      # # the following setting starts chaincode containers on the same
-      # # bridge network as the peers
-      # # https://docs.docker.com/compose/networking/
       - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=n2mi_n2med
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb:5984
-      # The CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME and CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
-      # provide the credentials for ledger to connect to CouchDB.  The username and password must
-      # match the username and password set for the associated CouchDB.
       - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
       - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
-      # Configuring TLS for peers nodes
-      - CORE_PEER_TLS_ENABLED=true
-      - CORE_PEER_TLS_CERT_FILE=
-      - CORE_PEER_TLS_KEY_FILE=
-    image: hyperledger/fabric-peer:1.4.0
-    networks:
-      - n2med
+      - TZ=America/Sao_Paulo
+    working_dir: /opt/gopath/src/github.com/hyperledger/fabric
+    command: peer node start
+    restart: always
     ports:
       - 7051:7051
       - 7053:7053
-    restart: always
     volumes:
-      - /var/run/:/host/var/run/
-      - ./certificates/crypto-config/peerOrganizations/n2mi.n2med.com/users/Admin@n2mi.n2med.com/tls/:/etc/hyperledger/fabric/tls/
-      - ./certificates/crypto-config/peerOrganizations/n2mi.n2med.com/peers/peer0.n2mi.n2med.com/msp:/etc/hyperledger/msp/peer
-      - ./certificates/crypto-config/peerOrganizations/n2mi.n2med.com/users:/etc/hyperledger/msp/users
-      - ./certificates/config:/etc/hyperledger/configtx
-    working_dir: /opt/gopath/src/github.com/hyperledger/fabric
+        - /var/run/:/host/var/run/
+        - ./certificates/crypto-config/peerOrganizations/n2mi.n2med.com/peers/peer0.n2mi.n2med.com/msp:/etc/hyperledger/msp/peer
+        - ./certificates/crypto-config/peerOrganizations/n2mi.n2med.com/users:/etc/hyperledger/msp/users
+        - ./certificates/config:/etc/hyperledger/configtx
+    depends_on:
+      - orderer.n2med.com
+    networks:
+      - n2med
 
   couchdb:
     container_name: couchdb
-    depends_on:
-      - peer0.n2mi.n2med.com
-    # Populate the COUCHDB_USER and COUCHDB_PASSWORD to set an admin user and password
-    # for CouchDB.  This will prevent CouchDB from operating in an "Admin Party" mode.
+    image: hyperledger/fabric-couchdb:0.4.15
     environment:
       - COUCHDB_USER=
       - COUCHDB_PASSWORD=
       - TZ=America/Sao_Paulo
-    image: hyperledger/fabric-couchdb:0.4.15
-    networks:
-      - n2med
+    restart: always
     ports:
       - 5984:5984
-    restart: always
+    depends_on:
+      - peer0.n2mi.n2med.com
+    networks:
+      - n2med
 
   cli:
-    command: /bin/bash
     container_name: cli
-    depends_on:
-      - couchdb
+    image: hyperledger/fabric-tools:1.4.0
+    tty: true
     environment:
       - GOPATH=/opt/gopath
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
@@ -132,14 +117,19 @@ services:
       - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/n2mi.n2med.com/users/Admin@n2mi.n2med.com/msp
       - CORE_CHAINCODE_KEEPALIVE=10
       - TZ=America/Sao_Paulo
-    image: hyperledger/fabric-tools:1.4.0
-    networks:
-      - n2med
+    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+    command: /bin/bash
     restart: always
-    tty: true
     volumes:
       - /var/run/:/host/var/run/
       - ./fabric/chaincodes/:/opt/gopath/src/github.com/
-      - ./certificates/crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
+      - ./certificates/crypto-config/:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
       - ./certificates/config:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
-    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+    depends_on:
+      - couchdb
+    networks:
+      - n2med
+
+volumes:
+  db-data:
+    driver: local
