[MAT-418] Criacao de arquivos para nova organizacao

--- a/environments/dev/new_org/configtx.yaml.template
+++ b/environments/dev/new_org/configtx.yaml.template
@@ -1,4 +1,8 @@
 Organizations:
+        - &Orderer{organization}
+                Name: Orderer{organization}MSP
+                ID: Orderer{organization}MSP
+                MSPDir: crypto-config/ordererOrganizations/{organization}.com/msp
 
         - &{organization}
                 Name: {organization}MSP
