--- a/environments/dev/new_org/crypto-config.yaml.template
+++ b/environments/dev/new_org/crypto-config.yaml.template
@@ -1,3 +1,15 @@
+OrdererOrgs:
+  # ---------------------------------------------------------------------------
+  # Orderer
+  # ---------------------------------------------------------------------------
+  - Name: Orderer
+    Domain: {organization}.com
+    # ---------------------------------------------------------------------------
+    # "Specs" - See PeerOrgs below for complete description
+    # ---------------------------------------------------------------------------
+    Specs:
+      - Hostname: orderer
+
 PeerOrgs:
   - Name: {organization}
     Domain: {organization}.com
