--- a/fabric/chaincodes/med/collection-config.json
+++ b/fabric/chaincodes/med/collection-config.json
@@ -6,5 +6,13 @@
 	    "maxPeerCount": 2,
         "blockToLive":1000000,
         "memberOnlyRead": true
+    },
+    {
+        "name": "MED-OFFER-PD",
+        "policy": "OR('N2miMSP.member')",
+	    "requiredPeerCount": 0,
+	    "maxPeerCount": 2,
+        "blockToLive":1000000,
+        "memberOnlyRead": true
     }
 ]
