--- a/environments/prod/nova-org/docker-compose.yml
+++ b/environments/prod/nova-org/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 services:
   ca:
     container_name: ca.${COMPANY_DOMAIN}
-    image: hyperledger/fabric-ca:1.4.1
+    image: hyperledger/fabric-ca
     command: sh -c 'fabric-ca-server start -d -b ${CA_ADMIN_USER}:${CA_ADMIN_PASSWORD} --port 7150 --cfg.identities.allowremove'
     environment:
         - FABRIC_CA_SERVER_HOME=/etc/hyperledger/fabric-ca
@@ -30,7 +30,7 @@ services:
     container_name: orderer.${COMPANY_DOMAIN}
     image: hyperledger/fabric-orderer
     environment:
-      - FABRIC_LOGGING_SPEC=debug
+      - FABRIC_LOGGING_SPEC=grpc=debug:info
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
       - ORDERER_GENERAL_GENESISMETHOD=file
       - ORDERER_GENERAL_GENESISFILE=/etc/hyperledger/configtx/genesis.block
@@ -40,7 +40,9 @@ services:
       - ORDERER_GENERAL_TLS_ENABLED=true
       - ORDERER_GENERAL_TLS_PRIVATEKEY=/etc/hyperledger/msp/orderer/tls/server.key
       - ORDERER_GENERAL_TLS_CERTIFICATE=/etc/hyperledger/msp/orderer/tls/server.crt
-      - ORDERER_GENERAL_TLS_ROOTCAS=[/etc/hyperledger/msp/orderer/tls/ca.crt]
+      - ORDERER_GENERAL_TLS_ROOTCAS=/etc/hyperledger/msp/orderer/tls/ca.crt
+      - ORDERER_GENERAL_TLS_CLIENTROOTCAS=/etc/hyperledger/msp/orderer/tls/ca.crt
+      - ORDERER_GENERAL_TLS_CLIENTAUTHREQUIRED=true
     working_dir: /opt/orderer
     command: orderer
     ports:
@@ -58,7 +60,7 @@ services:
     environment:
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_PEER_ID=peer${PEER_NUMBER}.${COMPANY_DOMAIN}
-      - FABRIC_LOGGING_SPEC=debug
+      - FABRIC_LOGGING_SPEC=grpc=debug:info
       - CORE_PEER_GOSSIP_USELEADERELECTION=true
       - CORE_PEER_GOSSIP_ORGLEADER=false
       - CORE_PEER_PROFILE_ENABLED=true
@@ -76,7 +78,8 @@ services:
       - CORE_PEER_TLS_ENABLED=true
       - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/peer/tls/server.crt
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/peer/tls/server.key
-      - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/peer/tls/ca.crt      
+      - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/peer/tls/ca.crt
+      - ORDERER_GENERAL_TLS_CLIENTAUTHREQUIRED=true
     working_dir: /etc/hyperledger/peer
     command: peer node start
     ports:
@@ -100,7 +103,7 @@ services:
     environment:
       - GOPATH=/opt/gopath
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - FABRIC_LOGGING_SPEC=info
+      - FABRIC_LOGGING_SPEC=grpc=debug:info
       - CORE_PEER_ID=cli
       - CORE_PEER_ADDRESS=peer${PEER_NUMBER}.${COMPANY_DOMAIN}:7051
       - CORE_PEER_LOCALMSPID=${ORGANIZATION_NAME}MSP
