--- a/environments/prod/rede-inicial-n2mi/docker-compose.yml
+++ b/environments/prod/rede-inicial-n2mi/docker-compose.yml
@@ -35,20 +35,25 @@ services:
       - ORDERER_GENERAL_GENESISMETHOD=file
       - ORDERER_GENERAL_GENESISFILE=/etc/hyperledger/configtx/genesis.block
       - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
-      - ORDERER_GENERAL_LOCALMSPDIR=/etc/hyperledger/msp/orderer/msp
+      - ORDERER_GENERAL_LOCALMSPDIR=/etc/hyperledger/orderer/msp
+      - FABRIC_CFG_PATH=/etc/hyperledger/ordererConfig
       # Enable TLS
       - ORDERER_GENERAL_TLS_ENABLED=true
-      - ORDERER_GENERAL_TLS_PRIVATEKEY=/etc/hyperledger/msp/orderer/tls/server.key
-      - ORDERER_GENERAL_TLS_CERTIFICATE=/etc/hyperledger/msp/orderer/tls/server.crt
-      - ORDERER_GENERAL_TLS_ROOTCAS=[/etc/hyperledger/msp/orderer/tls/ca.crt]      
-    working_dir: /opt/orderer
+      - ORDERER_GENERAL_TLS_PRIVATEKEY=/etc/hyperledger/orderer/tls/server.key
+      - ORDERER_GENERAL_TLS_CERTIFICATE=/etc/hyperledger/orderer/tls/server.crt
+      - ORDERER_GENERAL_TLS_ROOTCAS=[/etc/hyperledger/orderer/tls/ca.crt]
+      - ORDERER_GENERAL_CLUSTER_CLIENTCERTIFICATE=/etc/hyperledger/orderer/tls/server.crt
+      - ORDERER_GENERAL_CLUSTER_CLIENTPRIVATEKEY=/etc/hyperledger/orderer/tls/server.key
+      - ORDERER_GENERAL_CLUSTER_ROOTCAS=[/etc/hyperledger/orderer/tls/ca.crt]
+    working_dir: /etc/hyperledger/
     command: orderer
     ports:
       - 7050:7050
     volumes:
         - ./config/:/etc/hyperledger/configtx
-        - ./crypto-config/ordererOrganizations/orderers/orderer.n2med.com/:/etc/hyperledger/msp/orderer
-        - ./crypto-config/peerOrganizations/peers/peer0.n2med.com/:/etc/hyperledger/msp/
+        - ./crypto-config/ordererOrganizations/orderers/orderer.n2med.com/:/etc/hyperledger/orderer
+        - ./crypto-config/peerOrganizations/peers/peer0.n2med.com/:/etc/hyperledger/
+        - ./ordererConfig:/etc/hyperledger/ordererConfig
     networks:
       - n2med
 
