--- a/environments/prod/rede-inicial-n2mi/docker-compose.yml
+++ b/environments/prod/rede-inicial-n2mi/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 services:
   rca.n2med:
       container_name: rca.n2med.com
-      image: hyperledger/fabric-ca:1.4.1
+      image: hyperledger/fabric-ca:1.4.3
       command: sh -c 'fabric-ca-server start -d -b admin:adminpw --port 7054 --cfg.identities.allowremove'
       environment:
          - FABRIC_LOGGING_SPEC=grpc=debug:info        
@@ -55,6 +55,68 @@ services:
         - ./crypto-config/ordererOrganizations/orderers/orderer.n2med.com/:/etc/hyperledger/orderer
         - ./crypto-config/peerOrganizations/peers/peer0.n2med.com/:/etc/hyperledger/
         - ./ordererConfig:/etc/hyperledger/ordererConfig
+    networks:
+      - n2med
+
+  orderer2.n2med.com:
+    container_name: orderer2.n2med.com
+    image: hyperledger/fabric-orderer
+    environment:
+      - FABRIC_LOGGING_SPEC=grpc=debug:info
+      - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
+      - ORDERER_GENERAL_GENESISMETHOD=file
+      - ORDERER_GENERAL_GENESISFILE=/etc/hyperledger/configtx/genesis.block
+      - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
+      - ORDERER_GENERAL_LOCALMSPDIR=/etc/hyperledger/orderer/msp
+      - FABRIC_CFG_PATH=/etc/hyperledger/ordererConfig
+      # Enable TLS
+      - ORDERER_GENERAL_TLS_ENABLED=true
+      - ORDERER_GENERAL_TLS_PRIVATEKEY=/etc/hyperledger/orderer/tls/server.key
+      - ORDERER_GENERAL_TLS_CERTIFICATE=/etc/hyperledger/orderer/tls/server.crt
+      - ORDERER_GENERAL_TLS_ROOTCAS=[/etc/hyperledger/orderer/tls/ca.crt]
+      - ORDERER_GENERAL_CLUSTER_CLIENTCERTIFICATE=/etc/hyperledger/orderer/tls/server.crt
+      - ORDERER_GENERAL_CLUSTER_CLIENTPRIVATEKEY=/etc/hyperledger/orderer/tls/server.key
+      - ORDERER_GENERAL_CLUSTER_ROOTCAS=[/etc/hyperledger/orderer/tls/ca.crt]
+    working_dir: /etc/hyperledger/
+    command: orderer
+    ports:
+      - 7060:7050
+    volumes:
+        - ./config/:/etc/hyperledger/configtx
+        - ./crypto-config/ordererOrganizations/orderers/orderer2.n2med.com/:/etc/hyperledger/orderer
+        - ./crypto-config/peerOrganizations/peers/peer0.n2med.com/:/etc/hyperledger/
+        - ./ordererConfig2:/etc/hyperledger/ordererConfig        
+    networks:
+      - n2med
+
+  orderer3.n2med.com:
+    container_name: orderer3.n2med.com
+    image: hyperledger/fabric-orderer
+    environment:
+      - FABRIC_LOGGING_SPEC=grpc=debug:info
+      - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
+      - ORDERER_GENERAL_GENESISMETHOD=file
+      - ORDERER_GENERAL_GENESISFILE=/etc/hyperledger/configtx/genesis.block
+      - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
+      - ORDERER_GENERAL_LOCALMSPDIR=/etc/hyperledger/orderer/msp
+      - FABRIC_CFG_PATH=/etc/hyperledger/ordererConfig    
+      # Enable TLS
+      - ORDERER_GENERAL_TLS_ENABLED=true
+      - ORDERER_GENERAL_TLS_PRIVATEKEY=/etc/hyperledger/orderer/tls/server.key
+      - ORDERER_GENERAL_TLS_CERTIFICATE=/etc/hyperledger/orderer/tls/server.crt
+      - ORDERER_GENERAL_TLS_ROOTCAS=[/etc/hyperledger/orderer/tls/ca.crt]
+      - ORDERER_GENERAL_CLUSTER_CLIENTCERTIFICATE=/etc/hyperledger/orderer/tls/server.crt
+      - ORDERER_GENERAL_CLUSTER_CLIENTPRIVATEKEY=/etc/hyperledger/orderer/tls/server.key
+      - ORDERER_GENERAL_CLUSTER_ROOTCAS=[/etc/hyperledger/orderer/tls/ca.crt]
+    working_dir: /etc/hyperledger/
+    command: orderer
+    ports:
+      - 7070:7050
+    volumes:
+        - ./config/:/etc/hyperledger/configtx
+        - ./crypto-config/ordererOrganizations/orderers/orderer3.n2med.com/:/etc/hyperledger/orderer
+        - ./crypto-config/peerOrganizations/peers/peer0.n2med.com/:/etc/hyperledger/
+        - ./ordererConfig3:/etc/hyperledger/ordererConfig        
     networks:
       - n2med
 
